LIST OF CHANGES
---------------

release 57.4.0
 - change genotype qc check to cram input
 - LSF array indexes fix for jobs dealign with chunked data
   (multiple jobs per product)
 - esignate no_archive directory for files for chunked entities,
   which are not end products
 - haplotype caller function: early detection of prducts that are
   not for release (tag zero and control)

release 57.3.0
 - add chromium libs (forced no target alignment) to bam prune skip 
   list in seq_alignment
 - archival pipeline function for deletion of intermediate files
 - script to generate receipts files to be used by npg_run_is_deletable
   scrit for one of teh studies

release 57.2.0
 - prune bam generation for most products with no alignment and
   change bam_flagstats command in seq_alignment to crams
 - skip markdup step in seq_alignment for spike tag
 - add haplotypecaller to function list
 - use only public run folder methods
 - path logic improvements

release 57.1.1
 - all components of npg_run_is_deletable script to use samplesheet
   as a source of LIMS data

release 57.1.0
 - configurable study-level qc criteria for archival and for minimum
   delay for run folder deletion

release 57.0.3
 - add missing indexing step to merge_recompress

release 57.0.2
 - fix logic in WR dependancies where pipeline converges

release 57.0.1
 - fix where new code was not taking NPG_REPOSITORY_ROOT and add
   duplicated code to ref cache.

release 57.0.0
 - supply MD5 in bucket file upload if available in sibling md5 file
 - add function to support GATK HaplotypeCaller and apply BQSR
 - add function to concat and recompress gVCFs
 - add function to calculate BQSR table
 - cram files as input to the adapter autoqc check
 - make list of files due to be archived dependent on alignment
    confuguration of the study
 - run folders for test data restructured to reflect new-style
    product hierarchy and not to use outdated path component
    names (bustard, etc)

release 56.1.0